# micah

./: .env.example  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  micah_arch.drawio  old_build.rs
src/: feline.rs  listener.rs  main.rs  process.rs  process_test.rs  web.c  web.rs  webserver.c  webserver.cpp
