[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.3.2", features = ["full"] }
cxx = "1.0.128"
dotenv = "0.15.0"
eyre = "0.6.12"
futures-util = "0.3.30"
rdkafka = "0.36.2"
reqwest = "0.12.7"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }

[build-dependencies]
cxx-build = "1.0.128"

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"

