[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.3.2", features = ["full"] }
axum = "0.7.7"
bb8-redis = "0.17.0"
cxx = "1.0.128"
dotenv = "0.15.0"
eyre = "0.6.12"
futures = "0.3.30"
futures-util = "0.3.30"
rdkafka = "0.36.2"
redis = "0.27.2"
reqwest = "0.12.7"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }

[build-dependencies]
cxx-build = "1.0.128"

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"

[[bin]]
name = "meow"
path = "src/feline.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "process"
path = "src/process.rs"

[[bin]]
name = "web"
path = "src/web.rs"

[[bin]]
name = "listener"
path = "src/listener.rs"